Fix gauge width on tablet

--- a/app/assets/stylesheets/indicators.scss
+++ b/app/assets/stylesheets/indicators.scss
@@ -720,8 +720,8 @@ a.plain-link {
 /* Tablet */
 @media screen and (min-width: 741px) and (max-width: 1024px) {
   .gauge-wrapper {
-    width: 260px;
-    height: 140px;
+    width: 200px;
+    height: 110px;
   }
 }
 
